# ekinox

./: README.md  pyproject.toml
config/: config.yaml
data/: movies.txt
src/ekinox_technical_test/: compute_basket.py
tests/: test_compute_basket.py
