[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "ekinox_technical_test"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Applies discount on the provided basket based on the franchises parameters"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]